changed colors button on hover to make it obvious what's being selected or hovered over. Also, unknowinly I seem to have fixed the table bug where when window was too small the selected table row would be outside boundary and it seems the table is responsive now. Maybe having a responsive div container inside for InvoiceBoxOptions had this side-effect?

--- a/src/InvoiceBoxOptions.css
+++ b/src/InvoiceBoxOptions.css
@@ -22,13 +22,12 @@
 	height: 40px;
 	margin: 0;
 	padding: 0;
-	background-color: #007bff;
-	border-color: #007bff;
+	background-color: rgba(0,123,255, 0.5);
 	box-shadow: 2px 5px;
 }
 
 .box:hover {
-	background-color: #007bc0;
+	background-color: rgba(0,123,255, 0.8);
 }
 
 
@@ -42,4 +41,8 @@
 	position: relative;
 	left: 1%;
 	background-color: rgba(255, 0, 0, 0.5);
+}
+
+.showSearchBar:hover {
+		background-color: rgba(255, 0, 0, 0.8);
 }
